syntax = "proto3";

option go_package = "edm-entities-approval-rules-presentation-abstractions-internals";

package Edm.Entities.Approval.Rules.Presentation.Abstractions.Internals;

option csharp_namespace = "Edm.Entities.Approval.Rules.Presentation.Abstractions.Internals";

import "Grpc/Contracts/EntitiesTypes/Keys/entity_type_key.proto";

import "Grpc/Services/Internals/Rules/Queries/GetActivationAudit/Contracts/Audits/Records/approval_rule_activation_audit_record.proto";

message GetActivationAuditApprovalRulesQuery {
  EntityTypeKeyDto entity_type_key = 1;
}

message GetActivationAuditApprovalRulesQueryResponse {
  repeated GetActivationAuditApprovalRulesQueryResponseAuditRecord activation_audit = 1;
}
